# async-filelike

./: Cargo.toml  README.md
benches/: comparison.rs
examples/: adaptor.rs  file_io.rs  multitask.rs
src/: lib.rs
tests/: handle.rs
