[package]
name = "async-filelike"
version = "0.1.0"
edition = "2018"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "Asynchronous adaptors for file-like objects"
homepage = "https://github.com/notgull/async-filelike#readme"
repository = "https://github.com/notgull/async-filelike"
keywords = ["async", "file", "io"]

[dependencies]
async-io = "1.9.0"
async-lock = "2.5.0"
blocking = "1"
futures-lite = { version = "1.12.0", default-features = false }
log = "0.4.17"
once_cell = "1.14.0"
submission = { path = "../submission" }

[[bench]]
name = "comparison"
harness = false

[dev-dependencies]
async-channel = "1.7.1"
async-executor = "1.4.1"
criterion = "0.4.0"
easy-parallel = "3.2.0"
env_logger = "0.9.0"
